fix(#84): add dev configuration for open-api-generator endpoints